# youtube-analytics-project_shchepelkov

./: pyproject.toml
src/: channel.py  mixinapi.py  playlist.py  video.py
