[tool.poetry]
name = "youtube-analytics-project-shchepelkov"
version = "0.1.0"
description = ""
authors = ["Viacheslav Shchepelkov <eldigor@yandex.ru>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project_shchepelkov"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.91.0"
flake8 = "^6.0.0"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
